--- a/assets/fonts/stylesheet.css
+++ b/assets/fonts/stylesheet.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Indy Serif";
-  src: url(/assets/fonts/Independent-Serif-Regular.woff2) format("woff2");
+  src: url(./Independent-Serif-Regular.woff2) format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "Indy Serif";
-  src: url(/assets/fonts/Independent-Serif-Regular-Italic.woff2) format("woff2");
+  src: url(./Independent-Serif-Regular-Italic.woff2) format("woff2");
   font-weight: 400;
   font-style: italic;
   font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: "Indy Serif";
-  src: url(/assets/fonts/Independent-Serif-Bold.woff2) format("woff2");
+  src: url(./Independent-Serif-Bold.woff2) format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
   font-family: "Indy Serif";
-  src: url(/assets/fonts/Independent-Serif-Bold-Italic.woff2) format("woff2");
+  src: url(./Independent-Serif-Bold-Italic.woff2) format("woff2");
   font-weight: 700;
   font-style: italic;
   font-display: swap;
@@ -32,7 +32,7 @@
 
 @font-face {
   font-family: "Indy Sans";
-  src: url(/assets/fonts/Independent-Sans-Regular.woff2) format("woff2");
+  src: url(./Independent-Sans-Regular.woff2) format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -40,7 +40,7 @@
 
 @font-face {
   font-family: "Indy Sans";
-  src: url(/assets/fonts/Independent-Sans-Medium.woff2) format("woff2");
+  src: url(./Independent-Sans-Medium.woff2) format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -48,7 +48,7 @@
 
 @font-face {
   font-family: "Indy Sans Web";
-  src: url(/assets/fonts/Independent-Sans-Web-Regular.woff2) format("woff2");
+  src: url(./Independent-Sans-Web-Regular.woff2) format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
