--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@
   border: 1px solid rgba(233, 233, 233, 1);
   border-radius: 4px;
   max-width: 730px;
+  /* padding-bottom: 125px; */
 }
 
 .container .cost .cost-deatails {
@@ -56,11 +57,13 @@
   font-size: 18px;
   font-weight: 500;
   display: flex;
+  justify-content: center;
   align-items: center;
   gap: 7px;
   border: none;
   box-shadow: none;
   font-family: "Indy Sans", "Adjusted Indy Sans Fallback", "sans";
+  width: 100%;
 }
 
 .org-btn {
@@ -82,9 +85,9 @@
   align-self: end;
 }
 
-.summary-section {
+.border {
   border: 1px solid rgba(233, 233, 233, 1);
-  background-color: white;
+  border-radius: 4px;
 }
 
 .blur-effect {
@@ -95,6 +98,7 @@
   display: flex;
   justify-content: space-around;
   position: relative;
+  gap: 20px;
 }
 
 .result-cost {
@@ -110,8 +114,9 @@
 
 .summary-heading h3 {
   font-size: 28px;
-  font-weight: 500;
+  font-family: "Indy Sans Web";
   line-height: 33px;
+  padding-bottom: 12px;
 }
 
 .summary-cost .result-cost .result-cost--desc h5 {
@@ -132,7 +137,12 @@
 }
 
 .install {
-  margin: -80px 0px;
+  position: absolute;
+  bottom: 91px;
+}
+
+.install.hide {
+  display: none;
 }
 
 .install h3 {
@@ -142,16 +152,19 @@
 }
 
 .saving-section {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: space-between;
-  padding: 140px 0px 0px;
-  margin-bottom: 31px;
+  margin: 31px 0px;
+}
+
+.saving-section.show {
+  display: flex;
 }
 
 .saving-section .info h4 {
-  font-family: "Indy Sans Web";
   font-size: 22px;
+  cursor: pointer;
 }
 
 .saving-section .drop-down_icon.active svg {
@@ -159,11 +172,15 @@
 }
 
 .compare-section {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   text-align: justify;
   gap: 16px;
+}
+
+.compare-section.show {
+  display: flex;
 }
 
 .deco {
@@ -192,6 +209,15 @@
   padding: 11px 21px;
 }
 
+button.info {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  box-shadow: none;
+  border: none;
+  background: white;
+}
+
 .savings {
   padding: 12px;
   border: 1px solid rgba(233, 233, 233, 1);
@@ -205,7 +231,7 @@
   align-items: center;
 }
 
-.saving-section--desc_amount {
+.saving-section-desc .flex:nth-child(3) {
   border-top: 1px solid rgba(233, 233, 233, 1);
   padding-top: 4px;
 }
@@ -252,51 +278,45 @@
   }
 
   .container .cost .cost-deatails {
-    grid-template-columns: auto;
+    grid-template-columns: auto auto;
+  }
+
+  .install {
+    bottom: 49px;
   }
 }
 
 @media (max-width: 768px) {
   .summary-cost {
-    display: block;
+    flex-direction: column;
   }
 
   .install {
-    margin: -222px 0px;
+    bottom: -51px;
   }
 
-  .install h3 {
-    margin: 72px 32px;
-  }
-
-  .saving-section {
-    padding: 279px 0px 0px;
-  }
-
-  .compare-section {
-    display: block;
-  }
-}
-
-@media (max-width: 441px) {
-  .compare-section--left {
-    display: none;
-    border: none;
+  .compare-section.show {
+    flex-direction: column;
+    padding-bottom: 40px;
   }
 
   .compare-section--right {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding: 0;
+    z-index: 50;
     border: none;
+    width: 100%;
   }
 
   .compare-section--right h5 {
     display: none;
   }
+}
 
-  .black-btn {
-    position: fixed;
-    bottom: 0px;
-    left: 0;
-    width: 100%;
-    justify-content: center;
+@media (max-width: 441px) {
+  .container .cost .cost-deatails {
+    grid-template-columns: auto;
   }
 }
